[gd_scene load_steps=4 format=3 uid="uid://cfkh6v6yhhyj0"]

[ext_resource type="Script" path="res://src/ui/SpeechBubble/speech_bubble.gd" id="1_a3mru"]
[ext_resource type="Texture2D" uid="uid://b14pke4igdg04" path="res://assets/graphics/textures/ui/bubble_bg_round.png" id="3_5pekl"]
[ext_resource type="Script" path="res://src/components/c_gui_scale.gd" id="3_joysw"]

[node name="SpeechBubble" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(480, 0)
script = ExtResource("1_a3mru")

[node name="BubbleBG" type="NinePatchRect" parent="."]
modulate = Color(1, 0.917647, 0.670588, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.5
offset_top = -109.5
offset_right = 269.5
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5pekl")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="BubbleText" type="RichTextLabel" parent="BubbleBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -11.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]There is so much struggle as a [wave]Potato[/wave], you have no limbs, you can't see, you can't feel. You can [color=red]only[/color] touch.[/center]"

[node name="CGUIScale" type="Node" parent="."]
script = ExtResource("3_joysw")
enable_hover_effect = false
